[gd_scene load_steps=4 format=3 uid="uid://v8qwmno661tg"]

[ext_resource type="Texture2D" uid="uid://cdshoq0nr4y4d" path="res://assets/Pictures/elements/设置.png" id="1_0ucsi"]
[ext_resource type="Script" uid="uid://cbv0aems73k45" path="res://Scenes/UserPlayUI/SettingPage/setting_page.gd" id="1_14jjx"]
[ext_resource type="Texture2D" uid="uid://dmhl3k48duslw" path="res://assets/Pictures/elements/back.png" id="2_7p2xg"]

[node name="SettingPage" type="Node2D"]
z_index = 1
script = ExtResource("1_14jjx")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.129412, 0.14902, 0.180392, 1)

[node name="Title" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 32.0
offset_top = 24.0
offset_right = 408.0
offset_bottom = 152.0

[node name="TextureRect" type="TextureRect" parent="Title"]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 96.0
offset_bottom = 96.0
texture = ExtResource("1_0ucsi")

[node name="Label" type="Label" parent="Title"]
layout_mode = 0
offset_left = 112.0
offset_right = 234.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 61
text = "设置"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="TextureButton" parent="."]
offset_left = 1784.0
offset_top = 64.0
offset_right = 1848.0
offset_bottom = 136.0
texture_normal = ExtResource("2_7p2xg")

[node name="Items" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RatioItem" type="Control" parent="Items"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Items/RatioItem"]
layout_mode = 0
offset_left = 152.0
offset_top = 192.0
offset_right = 302.0
offset_bottom = 264.0
theme_override_font_sizes/font_size = 50
text = "分辨率"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ratio" type="OptionButton" parent="Items/RatioItem"]
layout_mode = 0
offset_left = 320.0
offset_top = 192.0
offset_right = 672.0
offset_bottom = 264.0
theme_override_font_sizes/font_size = 48
alignment = 1
autowrap_mode = 3
selected = 0
item_count = 2
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1280x720"
popup/item_1/id = 1

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="item_selected" from="Items/RatioItem/ratio" to="." method="_on_ratio_item_selected"]
